	The 'firstlinetype' option allows you to set linetype properties for
	a block of linetypes, including dot-dash patterns,  and then specify
	that these customized linetypes be used to generate contour lines.
	In this case you probably want to also use the other new keyword
	'sorted' because by default contour lines are not generated in
	consistent ascending order.
	Bugs #1603 #1612

2017-11-06  Achim Gratz <Stromeko@nexgo.de>

	* configure.ac:  The configury supposedly tried to find TEXDIR via
	kpsexpand, but that code never gets run if $prefix is set.

2017-11-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  `set log x; set xtics foo` would always place
	the first axis tic at foo rather than at (foo / base^N) for suitable N.

	* src/graphics.c (plot_betweencurves):
		plot 'foo with filledcurves below y=bar
	would fail to identify "below" regions where the y value of the
	start or end data point was exactly (foo[x] == bar).
	Bug #1983

2017-11-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (ConsolePutS, ConsolePutCh):  Use standard file IO
	instead of Console API to enable word-wrapping on Windows 10 and to
	allow for redirection of stdout/stderr.
	Bug #1985

2017-11-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Raise the maximum number of relative moves before a
	stroke so that a full circle as drawn by do_arc() does not glitch due
	to insertion of a "stroke xx yy M" sequence that resets the dot/dash
	pattern.
	Bug #1987

2017-11-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c(eval_plots):  Fix a regression.
	Emply y range for logscale y errors out rather than auto-extending the
	range with a warning. Extension can be handled by the same routine
	used for linear axes.
	Bug #1978

2017-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.c:  Remove obsolete comments and trivial
	typos. Add documentation section for piped input data.
